samples/_failures_safe/1761074874_5c3bf1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f45e580f.c: In function ‘main’:
./samples/SAFE/__tmp_f45e580f.c:144:9: error: expected expression at end of input
  144 |         fprintf(stderr,
      |         ^~~~~~~
./samples/SAFE/__tmp_f45e580f.c:144:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f45e580f.c:144:9: error: expected declaration or statement at end of input
